syntax = "proto3";

option go_package = "github.com/beam-cloud/beam/proto";

package map;

service MapService {
  rpc MapSet(MapSetRequest) returns (MapSetResponse) {}
}

message MapSetRequest {
  string key = 1;
  bytes value = 2;
}

message MapSetResponse {
  bool ok = 1;
}

